--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
-    "ecsy": "0.2.3",
+    "@reduxjs/toolkit": "1.3.2",
     "nrepl-client": "0.3.0",
     "p5": "1.0.0"
   }
