--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "devDependencies": {
     "@types/p5": "^0.9.0",
     "electron": "8.2.0",
+    "electron-devtools-installer": "^2.2.4",
     "tslint": "6.1.0",
     "typescript": "3.8.3"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.3.2",
     "nrepl-client": "0.3.0",
-    "p5": "1.0.0"
+    "p5": "1.0.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
