--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.3.2",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
+    "htm": "^3.0.3",
     "nrepl-client": "0.3.0",
     "p5": "1.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "redux-devtools-extension": "^2.13.8"
   }
 }
