--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "1.3.2",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
+    "ecsy": "^0.2.3",
     "htm": "^3.0.3",
     "nrepl-client": "0.3.0",
     "p5": "1.0.0",
