--- a/package.json
+++ b/package.json
@@ -10,21 +10,18 @@
   },
   "devDependencies": {
     "@types/p5": "^0.9.0",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
     "electron": "8.2.0",
     "electron-devtools-installer": "^2.2.4",
     "tslint": "6.1.0",
     "typescript": "3.8.3"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "1.3.2",
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.6",
-    "ecsy": "^0.2.3",
     "htm": "^3.0.3",
     "nrepl-client": "0.3.0",
     "p5": "1.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "redux-devtools-extension": "^2.13.8"
+    "react-dom": "^16.13.1"
   }
 }
