--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "yarn build && electron ./dist/main.js"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "devDependencies": {
+    "@electron-forge/cli": "6.0.0-beta.50",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.50",
+    "@electron-forge/maker-zip": "6.0.0-beta.50",
     "@types/p5": "^0.9.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
@@ -23,5 +28,24 @@
     "p5": "1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-dmg",
+          "platforms": [
+            "darwin"
+          ]
+        }
+      ]
+    }
   }
 }
