--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "Kosmos",
   "version": "0.1.0",
-  "main": "main.ts",
+  "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "electron-forge start",
+    "start": "npm run build && electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
@@ -14,6 +14,7 @@
     "@electron-forge/cli": "6.0.0-beta.50",
     "@electron-forge/maker-dmg": "^6.0.0-beta.50",
     "@electron-forge/maker-zip": "6.0.0-beta.50",
+    "@types/node": "^12.12.21",
     "@types/p5": "^0.9.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
@@ -31,7 +32,9 @@
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "./assets/Icon.icns"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-zip",
