--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@electron-forge/cli": "6.0.0-beta.50",
     "@electron-forge/maker-dmg": "^6.0.0-beta.50",
     "@electron-forge/maker-zip": "6.0.0-beta.50",
+    "@types/mousetrap": "^1.6.3",
     "@types/node": "^12.12.21",
     "@types/p5": "^0.9.0",
     "@types/react": "^16.9.32",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "htm": "^3.0.3",
+    "mousetrap": "^1.6.5",
     "nrepl-client": "0.3.0",
     "p5": "1.0.0",
     "react": "^16.13.1",
