--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.6",
     "htm": "^3.0.3",
     "immer": "^6.0.5",
     "mousetrap": "^1.6.5",
