--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@electron-forge/cli": "6.0.0-beta.50",
     "@electron-forge/maker-dmg": "^6.0.0-beta.50",
     "@electron-forge/maker-zip": "6.0.0-beta.50",
+    "@types/jest": "^25.2.3",
     "@types/mousetrap": "^1.6.3",
     "@types/node": "^12.12.21",
     "@types/p5": "^0.9.0",
@@ -23,6 +24,8 @@
     "@types/react-dom": "^16.9.6",
     "electron": "8.2.0",
     "electron-devtools-installer": "^2.2.4",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.0.0",
     "tslint": "6.1.0",
     "typescript": "3.8.3"
   },
