--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
+    "@types/graphlib-dot": "^0.6.1",
+    "electron-devtools-installer": "^2.2.4",
+    "graphlib-dot": "^0.6.4",
     "htm": "^3.0.3",
     "immer": "^6.0.5",
-    "electron-devtools-installer": "^2.2.4",
     "jsedn": "^0.4.1",
     "mousetrap": "^1.6.5",
     "nrepl-client": "0.3.0",
