--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "icons:reset": "touch out/Kosmos-darwin-x64/Kosmos.app"
   },
   "devDependencies": {
-    "@electron-forge/cli": "6.0.0-beta.50",
-    "@electron-forge/maker-dmg": "^6.0.0-beta.50",
-    "@electron-forge/maker-zip": "6.0.0-beta.50",
+    "@electron-forge/cli": "6.0.0-beta.52",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.52",
+    "@electron-forge/maker-zip": "6.0.0-beta.52",
     "@types/jest": "^25.2.3",
     "@types/mousetrap": "^1.6.3",
     "@types/node": "^12.12.21",
     "@types/p5": "^0.9.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
-    "electron": "8.2.0",
+    "electron": "8.2.4",
     "jest": "^26.0.1",
     "ts-jest": "^26.0.0",
     "tslint": "6.1.0",
@@ -36,6 +36,7 @@
     "htm": "^3.0.3",
     "immer": "^6.0.5",
     "jsedn": "^0.4.1",
+    "lodash": "4.17.19",
     "mousetrap": "^1.6.5",
     "nrepl-client": "0.3.0",
     "p5": "1.0.0",
