--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^16.9.6",
     "electron": "8.2.4",
     "jest": "^26.0.1",
+    "shadow-cljs": "^2.11.2",
     "ts-jest": "^26.0.0",
     "tslint": "6.1.0",
     "typescript": "3.8.3"
