--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "dev": "concurrently \"npm:watch:cljs\" \"npm:watch:ts\" \"npm:electron:start\"",
     "test": "npm run compile:cljs && node out/test/node.js",
     "release": "npm run compile:cljs && npm run compile:ts && npm run electron:make",
+
     "watch:cljs": "shadow-cljs watch app test",
     "watch:ts": "tsc --watch --preserveWatchOutput",
-    "compile:cljs": "shadow-cljs compile app",
+    "compile:cljs": "shadow-cljs compile app test",
     "compile:ts": "tsc",
     "electron:start": "electron-forge start",
     "electron:make": "electron-forge make",
