Update electron and start from cljs

--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "url": "https://github.com/antonvolkoff/kosmos.git"
   },
   "license": "MIT",
-  "main": "dist/main.js",
+  "main": "resources/desktop/main.js",
   "scripts": {
-    "dev": "concurrently \"npm:watch:cljs\" \"npm:watch:ts\" \"npm:electron:start\"",
+    "dev": "concurrently \"npm:watch\" \"npm:electron:start\"",
     "test": "shadow-cljs compile test",
-    "release": "shadow-cljs compile app && tsc && npm run electron:make",
-    "watch:cljs": "shadow-cljs watch app test",
-    "watch:ts": "tsc --watch --preserveWatchOutput",
+    "release": "shadow-cljs compile app && npm run electron:make",
+    "watch": "shadow-cljs watch main app",
     "electron:start": "electron-forge start",
     "electron:make": "electron-forge make",
     "icons:build": "(cd assets; ./build_icons.sh)",
@@ -29,7 +28,7 @@
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "concurrently": "5.3.0",
-    "electron": "8.5.2",
+    "electron": "^11.0.0-beta.13",
     "jest": "^26.0.1",
     "shadow-cljs": "^2.11.2",
     "ts-jest": "^26.0.0",
