--- a/site/package.json
+++ b/site/package.json
@@ -4,8 +4,8 @@
     "build": "next build && next export"
   },
   "dependencies": {
-    "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "next": "~10.0.0",
+    "react": "~17.0.1",
+    "react-dom": "~17.0.1"
   }
 }
