Render with paperjs

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mousetrap": "^1.6.5",
     "nrepl-client": "0.3.0",
     "p5": "1.0.0",
+    "paper": "0.12.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "redux": "^4.0.5",
