--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
+    "@psychobolt/react-paperjs": "0.0.58",
     "@reduxjs/toolkit": "^1.3.6",
     "@types/graphlib-dot": "^0.6.1",
     "electron-devtools-installer": "^2.2.4",
