--- a/package.json
+++ b/package.json
@@ -19,35 +19,35 @@
     "icons:reset": "touch out/Kosmos-darwin-x64/Kosmos.app"
   },
   "devDependencies": {
-    "@electron-forge/cli": "6.0.0-beta.52",
-    "@electron-forge/maker-dmg": "^6.0.0-beta.52",
-    "@electron-forge/maker-zip": "6.0.0-beta.52",
+    "@electron-forge/cli": "6.0.5",
+    "@electron-forge/maker-dmg": "6.0.5",
+    "@electron-forge/maker-zip": "6.0.5",
     "@types/mousetrap": "^1.6.3",
     "@types/node": "^12.12.21",
     "@types/p5": "^0.9.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "concurrently": "5.3.0",
-    "electron": "8.5.2",
+    "electron": "23.1.1",
     "shadow-cljs": "^2.11.2",
-    "typescript": "3.8.3"
+    "typescript": "4.9.5"
   },
   "dependencies": {
     "@psychobolt/react-paperjs": "0.0.58",
-    "@reduxjs/toolkit": "^1.3.6",
+    "@reduxjs/toolkit": "1.9.3",
     "@types/graphlib-dot": "^0.6.1",
     "electron-devtools-installer": "^2.2.4",
     "graphlib-dot": "^0.6.4",
     "htm": "^3.0.3",
-    "immer": "^6.0.5",
-    "lodash": "4.17.19",
+    "immer": "^9.0.19",
+    "lodash": "^4.17.21",
     "mousetrap": "^1.6.5",
     "nrepl-client": "0.3.0",
     "p5": "1.0.0",
     "paper": "0.12.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "redux": "^4.0.5",
+    "redux": "4.2.1",
     "redux-devtools-extension": "^2.13.8"
   },
   "config": {
